--- a/Presto.SWCamp.Lyrics/Presto.SWCamp.Lyrics/Presto.SWCamp.Lyrics.csproj
+++ b/Presto.SWCamp.Lyrics/Presto.SWCamp.Lyrics/Presto.SWCamp.Lyrics.csproj
@@ -54,6 +54,7 @@
     <Reference Include="PresentationFramework" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="LyricsParser.cs" />
     <Compile Include="LyricsWindow.xaml.cs">
       <DependentUpon>LyricsWindow.xaml</DependentUpon>
     </Compile>
