Update LyricsWindow.xaml, Presto.SWCamp.Lyrics.csproj, and equalizer.jpg
배경 이미지 변경, 폰트 변경, 폰트 테두리 및 효과 변경

--- a/Presto.SWCamp.Lyrics/Presto.SWCamp.Lyrics/Presto.SWCamp.Lyrics.csproj
+++ b/Presto.SWCamp.Lyrics/Presto.SWCamp.Lyrics/Presto.SWCamp.Lyrics.csproj
@@ -92,6 +92,9 @@
       <Generator>MSBuild:Compile</Generator>
     </Page>
   </ItemGroup>
+  <ItemGroup>
+    <Resource Include="images\equalizer.jpg" />
+  </ItemGroup>
   <PropertyGroup>
     <StartAction>Program</StartAction>
     <StartProgram>$(Presto)\Presto.exe</StartProgram>
